tests/errors/duplicate-loop-label.ari
fn main() -> i64 {
  loop: while true {
    loop: while true {
      break loop;
    }
  }
  return 0;
}
